--- a/app/src/main/res/layout/activity_cistac.xml
+++ b/app/src/main/res/layout/activity_cistac.xml
@@ -6,12 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".CleanerActivity">
 
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.appcompat.widget.AppCompatSpinner>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
         tools:layout_editor_absoluteX="10dp">
 
         <androidx.recyclerview.widget.RecyclerView
