--- a/app/src/main/res/layout/activity_kreiraj_oglas.xml
+++ b/app/src/main/res/layout/activity_kreiraj_oglas.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:text="Datum"
+            android:text="@string/datum"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="@+id/textViewVrijeme"
             app:layout_constraintHorizontal_bias="1.0"
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:hint="Datum"
+            android:hint="Pritisni 2 puta!"
             app:layout_constraintEnd_toStartOf="@+id/editTextVrijeme"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:hint="Vrijeme"
+            android:hint="Pritisni 2 puta!"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/editTextDatum"
@@ -70,7 +70,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:text="Vrijeme"
+            android:text="@string/vrijeme"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="50dp"
-            android:text="Naslov"
+            android:text="@string/naslov"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="@+id/textViewKvadratura"
             app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +98,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="20dp"
-            android:text="Kvadratura"
+            android:text="@string/kvadratura"
             android:textSize="20dp"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
-            android:text="Opis"
+            android:text="@string/opis"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextNaslov"
@@ -172,7 +172,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:text="Grad"
+            android:text="@string/grad"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="@+id/textViewUlica"
             app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +186,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:text="Ulica-kućni broj"
+            android:text="@string/ulicakucni"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textViewGrad"
@@ -230,7 +230,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:backgroundTint="#1E88E5"
-            android:text="Objavi"
+            android:text="@string/buttonObjavi"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
