--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:paddingTop="28dp"
-            android:text="ULOGIRAJTE SE"
+            android:text="@string/ulogirajse"
             android:textColor="@color/black"
             android:textSize="35dp"
             app:layout_constraintBottom_toTopOf="@+id/inputLayoutEmail"
@@ -84,7 +84,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="28dp"
             android:backgroundTint="#1E88E5"
-            android:text="LOGIN"
+            android:text="@string/buttonLogin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
