--- a/app/src/main/res/layout/adsrow.xml
+++ b/app/src/main/res/layout/adsrow.xml
@@ -51,7 +51,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Opis: "
+                android:text="@string/opisP"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
 
@@ -133,7 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Broj Ponuda"
+            android:text="@string/brPonuda"
             android:textSize="20dp"
             android:textColor="@color/black"/>
             <TextView
@@ -157,7 +157,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Pogledaj ponude"
+            android:text="@string/buttonPogledajponude"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:backgroundTint="#1E88E5"/>
