--- a/app/src/main/res/layout/offer_row.xml
+++ b/app/src/main/res/layout/offer_row.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Ponuđena cijena: "
+                android:text="@string/ponudenaCijena"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <TextView
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Ime: "
+                android:text="@string/ime"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <TextView
@@ -76,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Kontakt: "
+                android:text="@string/kontakt"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <TextView
@@ -94,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Prihvati ponudu"
+            android:text="@string/buttonPrihvatiPonudu"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:backgroundTint="#1E88E5"/>
