--- a/app/src/main/res/layout/activity_davatelj_oglasa.xml
+++ b/app/src/main/res/layout/activity_davatelj_oglasa.xml
@@ -19,7 +19,7 @@
         android:id="@+id/buttonKreirajOglas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Kreiraj oglas"
+        android:text="@string/kreiraj_oglas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycleViewOglasiPonude"
