--- a/app/src/main/res/layout/activity_done_job_cleaner.xml
+++ b/app/src/main/res/layout/activity_done_job_cleaner.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ActivityDoneJobCleaner">
 
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.appcompat.widget.AppCompatSpinner>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewDoneJob"
         android:layout_width="match_parent"
@@ -14,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
         app:layout_constraintVertical_bias="1.0" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
