--- a/app/src/main/res/layout/activity_my_offer.xml
+++ b/app/src/main/res/layout/activity_my_offer.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ActivityMyOffer">
 
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.appcompat.widget.AppCompatSpinner>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationCleaner"
         android:layout_width="match_parent"
@@ -21,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationCleaner"
-        app:layout_constraintTop_toTopOf="parent"   />
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <TextView
         android:id="@+id/textViewPorukaPrihvacenePonude"
