--- a/app/src/main/res/layout/activity_offer_review.xml
+++ b/app/src/main/res/layout/activity_offer_review.xml
@@ -60,7 +60,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Opis: "
+                    android:text="@string/opisP"
                     android:textSize="20dp"
                     android:textColor="@color/black"/>
 
