--- a/app/src/main/res/layout/activity_old_ads.xml
+++ b/app/src/main/res/layout/activity_old_ads.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".OldAdsActivity">
 
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.appcompat.widget.AppCompatSpinner>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/botomNavigationProvider"
         android:layout_width="match_parent"
@@ -17,13 +26,13 @@
         app:menu="@menu/menu_navigation" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewStariOglasi"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/recycleViewStariOglasi"
+        app:layout_constraintBottom_toTopOf="@+id/botomNavigationProvider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/botomNavigationProvider"/>
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <TextView
         android:id="@+id/textViewPorukaDavateljStari"
