--- a/app/src/main/res/layout/showoffer.xml
+++ b/app/src/main/res/layout/showoffer.xml
@@ -50,7 +50,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Opis: "
+                android:text="@string/opisP"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
 
@@ -132,7 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Ponuđena cijena: "
+                android:text="@string/ponudenaCijena"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <TextView
@@ -157,7 +157,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Označi kao odrađeno"
+            android:text="@string/buttonOznaciKaoOdradeno"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:backgroundTint="#1E88E5"/>
